# dat-p4

./: .gitignore  CMakeLists.txt  README.md  Style.md  build
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
includes/: ScopeVisitor.hpp  TypeVisitor.hpp  error.hpp  result.hpp  sequence.hpp  symbol_table.hpp  symbols.hpp  visitor.hpp
includes/Visitors/: ScopeVisitor.hpp  TypeVisitor.hpp  async_analysis.hpp  codegen.hpp  utility.hpp
includes/runtime/: all.hpp  events.hpp  mock_arduino.hpp  platform.hpp  primitives.hpp  test.hpp  type_traits.hpp  utilities.hpp
includes/symbols/: constant.hpp  event.h  event.hpp  forward_decl.hpp  function.hpp  namespace.hpp  type.hpp  variable.hpp
src/: ScopeVisitor.cc  cli.cc  eel.g4  error.cc  main.cc  parsing.cc  sequence.cc  symbol_table.cc
src/Visitors/: ScopeVisitor.cc  TypeVisitor.cc
src/symbols/: error.cc  event.cpp  function.cc  type.cc
src/visitors/: async_analysis.cc  codegen.cc  scope_analysis.cc  utility.cc
tests/: test_antlr.cc  test_runtime_events.cc  test_scope_visitor.cc  test_symbol_table.cc  test_type_visitor.cc
tests/codegen/: async_if.eel  sync_if.eel
